
syntax = "proto3";

package reservationManagement;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
message reservation {
    string id = 1;
    string reservationCode = 2;
    string guestId = 3;
    string roomId = 4;
    repeated string packageIds = 5;
    google.protobuf.Timestamp checkInDate = 6;
    google.protobuf.Timestamp checkOutDate = 7;
    int32 status = 8;
    repeated string specialRequestIds = 9;
    int32 paymentStatus = 10;
    double totalAmount = 11;
    string notes = 12;
    int32 numGuests = 13;
}




message VoidRequest {}

message CurrentUserReply {
    string userId = 1;
    string sessionId = 2;
    string fullname = 3;
    string email = 4;
    string roleId = 5;
    string avatar = 6;
    bool emailVerified = 7;
        string accessToken = 8;
}

message HelloMessageReply {
    string hello = 1;
}

service reservationManagementService {
    rpc currentUser(VoidRequest) returns (CurrentUserReply);
    rpc helloMessage(VoidRequest) returns (HelloMessageReply);
}